Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.11, 11.1(EOL), 11.2(EOL), 11.4, 11.6(EOL), 11.7(EOL)
Description
# mysqld options required for replay: --log-bin |
CREATE DATABASE db CHARACTER SET filename; |
USE db; |
CREATE TABLE t1 (a CHAR(209)) ENGINE=InnoDB; |
CREATE TABLE t2 (c INT) ENGINE=InnoDB; |
CREATE TEMPORARY TABLE t3 (c INT) ENGINE=InnoDB; |
SELECT * FROM t2 GROUP BY abc LIMIT 1; # ERROR 1054 (42S22): Unknown column 'abc' in 'group statement' |
INSERT INTO t1 VALUES (0); |
Leads to:
|
10.6.2 6c39eaeb126328e7813b146ecf652d51e4508981 (Debug) |
mysqld: /test/10.6_dbg/sql/field.cc:7680: Binlog_type_info_fixed_string::Binlog_type_info_fixed_string(uchar, uint32, CHARSET_INFO*): Assertion `octets < 1024' failed.
|
|
10.6.2 6c39eaeb126328e7813b146ecf652d51e4508981 (Debug) |
Core was generated by `/test/MD120621-mariadb-10.6.2-linux-x86_64-dbg/bin/mysqld --no-defaults --core-'.
|
Program terminated with signal SIGABRT, Aborted.
|
#0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
|
[Current thread is 1 (Thread 0x15321804c700 (LWP 2209916))]
|
(gdb) bt
|
#0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
|
#1 0x000015321a058859 in __GI_abort () at abort.c:79
|
#2 0x000015321a058729 in __assert_fail_base (fmt=0x15321a1ee588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x5570a8f1a2b2 "octets < 1024", file=0x5570a8f19f43 "/test/10.6_dbg/sql/field.cc", line=7680, function=<optimized out>) at assert.c:92
|
#3 0x000015321a069f36 in __GI___assert_fail (assertion=assertion@entry=0x5570a8f1a2b2 "octets < 1024", file=file@entry=0x5570a8f19f43 "/test/10.6_dbg/sql/field.cc", line=line@entry=7680, function=function@entry=0x5570a8f1ce10 "Binlog_type_info_fixed_string::Binlog_type_info_fixed_string(uchar, uint32, CHARSET_INFO*)") at assert.c:101
|
#4 0x00005570a839fc59 in Binlog_type_info_fixed_string::Binlog_type_info_fixed_string (this=0x15321804a290, type_code=<optimized out>, octets=1045, cs=<optimized out>) at /test/10.6_dbg/sql/field.cc:7680
|
#5 0x00005570a839fd2c in Field_string::binlog_type_info (this=0x1531c807cb48) at /test/10.6_dbg/sql/field.h:1256
|
#6 0x00005570a85585d1 in Table_map_log_event::Table_map_log_event (this=0x15321804a400, thd=<optimized out>, tbl=0x1531c807a358, tid=<optimized out>, is_transactional=<optimized out>) at /test/10.6_dbg/sql/log_event_server.cc:6254
|
#7 0x00005570a8530b61 in THD::binlog_write_table_map (this=this@entry=0x1531c8000db8, table=table@entry=0x1531c807a358, with_annotate=with_annotate@entry=true) at /test/10.6_dbg/sql/log.cc:6050
|
#8 0x00005570a8530f75 in THD::binlog_write_table_maps (this=this@entry=0x1531c8000db8) at /test/10.6_dbg/sql/log.cc:6002
|
#9 0x00005570a83d6a5b in handler::binlog_log_row (this=this@entry=0x1531c807cfa0, table=0x1531c807a358, before_record=before_record@entry=0x0, after_record=after_record@entry=0x1531c807d800 "\375\060", ' ' <repeats 198 times>..., log_func=log_func@entry=0x5570a83deda9 <Write_rows_log_event::binlog_row_logging_function(THD*, TABLE*, bool, unsigned char const*, unsigned char const*)>) at /test/10.6_dbg/sql/handler.cc:6964
|
#10 0x00005570a83d8954 in handler::ha_write_row (this=0x1531c807cfa0, buf=0x1531c807d800 "\375\060", ' ' <repeats 198 times>...) at /test/10.6_dbg/sql/handler.cc:7496
|
#11 0x00005570a80a1f56 in write_record (thd=thd@entry=0x1531c8000db8, table=table@entry=0x1531c807a358, info=info@entry=0x15321804acb0, sink=sink@entry=0x0) at /test/10.6_dbg/sql/sql_insert.cc:2113
|
#12 0x00005570a80adadc in mysql_insert (thd=thd@entry=0x1531c8000db8, table_list=0x1531c80141a8, fields=@0x1531c8005fd8: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x5570a96dbf80 <end_of_list>, last = 0x1531c8005fd8, elements = 0}, <No data fields>}, values_list=@0x1531c8006020: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x1531c8014db0, last = 0x1531c8014db0, elements = 1}, <No data fields>}, update_fields=@0x1531c8006008: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x5570a96dbf80 <end_of_list>, last = 0x1531c8006008, elements = 0}, <No data fields>}, update_values=@0x1531c8005ff0: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x5570a96dbf80 <end_of_list>, last = 0x1531c8005ff0, elements = 0}, <No data fields>}, duplic=DUP_ERROR, ignore=false, result=0x0) at /test/10.6_dbg/sql/sql_insert.cc:1104
|
#13 0x00005570a80f3d38 in mysql_execute_command (thd=thd@entry=0x1531c8000db8) at /test/10.6_dbg/sql/sql_parse.cc:4556
|
#14 0x00005570a80de890 in mysql_parse (thd=thd@entry=0x1531c8000db8, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x15321804b400) at /test/10.6_dbg/sql/sql_parse.cc:8016
|
#15 0x00005570a80ed3fa in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x1531c8000db8, packet=packet@entry=0x1531c800b889 "INSERT INTO t1 VALUES (0)", packet_length=packet_length@entry=25, blocking=blocking@entry=true) at /test/10.6_dbg/sql/sql_class.h:1340
|
#16 0x00005570a80f07da in do_command (thd=0x1531c8000db8, blocking=blocking@entry=true) at /test/10.6_dbg/sql/sql_parse.cc:1406
|
#17 0x00005570a8254c8e in do_handle_one_connection (connect=<optimized out>, connect@entry=0x5570ac1b3e58, put_in_cache=put_in_cache@entry=true) at /test/10.6_dbg/sql/sql_connect.cc:1410
|
#18 0x00005570a8255293 in handle_one_connection (arg=arg@entry=0x5570ac1b3e58) at /test/10.6_dbg/sql/sql_connect.cc:1312
|
#19 0x00005570a8703166 in pfs_spawn_thread (arg=0x5570ac083e28) at /test/10.6_dbg/storage/perfschema/pfs.cc:2201
|
#20 0x000015321a566609 in start_thread (arg=<optimized out>) at pthread_create.c:477
|
#21 0x000015321a155293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
|
Bug confirmed present in:
MariaDB: 10.2.38 (dbg), 10.3.29 (dbg), 10.4.19 (dbg), 10.5.10 (dbg), 10.6.2 (dbg)
MySQL: 5.5.62 (dbg), 5.6.51 (dbg)
Bug (or feature/syntax) confirmed not present in:
MariaDB: 10.2.38 (opt), 10.3.29 (opt), 10.4.19 (opt), 10.5.10 (opt), 10.6.2 (opt)
MySQL: 5.5.62 (opt), 5.6.51 (opt), 5.7.34 (dbg), 5.7.34 (opt), 8.0.24 (dbg), 8.0.24 (opt)